			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2827 2006/06/09 11:29:57 t-momose Exp $

<200606>
2006-06-09  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/kame/shisad: RFC4285 on home agnets is implemented.
	
<200604>
2006-04-23  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_is_addr_neighbor): disabled the
	on-link assumption from the determination logic.

2006-04-09  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_mroute.c (ip6_mrouter_done): used
	if_allmulti(0) for diabling the multicast promiscuous mode for
	FreeBSD.  Without this change, an IPv6 multicast router would
	leave interfaces in the promiscuous mode even after the routing
	daemon terminates.

2006-04-02  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c: fixed a bug that an MLDv2 IS-IN Report
	is not advertised for an MLDv2 general Query

<200603>
2006-03-28  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/ip6_output.c: fixed a kernel crash by an ASM
	join from a userland application (KAME PR sys/932)

2006-03-27  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c: fixed several bugs regarding MLDv2-timer

2006-03-22  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/nd6.c: fixed a kernel crash due to a double-free
	introduced in the below fix

2006-03-17  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/nd6.c: fixed a memory leak for an unresolved
	packet in ND queue

2006-03-15  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/nd6_rtr.c: implements section 2.2. of 
	RFC4191, regarding the reserved preference value (10).
	
Fri Mar  3 20:20:37 JST 2006	keiichi@iijlab.net
	* netbsd/sys/netinet6/in6_pcb.c: send an IPV6_PATHMTU ancillary
	data when sending a packet whose size is larger than the path
	mtu to the destination.

2005-03-03  SUZUKI, Shinsuke <suz@alaxala.net>
	* removed the dhcpv6-related programs, since they are 